--- a/mirrors/requirements-simple.txt
+++ b/mirrors/requirements-simple.txt
@@ -1,12 +1,14 @@
-## webframework
+# frame work
+celery==5.2.3
+
+# log
+loguru==0.6.0
+
+#
 pydantic==1.9.0
 
-## toml file read
+# TOML
 pytomlpp==1.0.10
 
-## log
-loguru==0.5.3
-
-## celery
-celery==5.2.3
-redis==4.1.1
+# Redis
+redis==4.1.4
