--- a/docs/deploy/docker-compose.yaml
+++ b/docs/deploy/docker-compose.yaml
@@ -5,14 +5,15 @@ services:
     image: rabbitmq:3.8-management
     container_name: fastapi_tm_rabbitmq
     hostname: fastapi_tm_rabbitmq
+    networks:
+      dev_net:
+        ipv4_address: "172.20.5.5"
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - ./data/rabbitmq:/var/lib/rabbitmq
     environment:
       - RABBITMQ_DEFAULT_USER=root
       - RABBITMQ_DEFAULT_PASS=root
-    networks:
-      dev_net:
-        ipv4_address: "172.20.5.5"
 
   redis:
     image: redis:6.2-alpine
@@ -20,28 +21,28 @@ services:
     networks:
       dev_net:
         ipv4_address: "172.20.5.6"
-    volumes:
-      - ./data/redis/data:/data
     command: redis-server --requirepass 12345678
-    environment:
-      - TZ=Asia/Shanghai
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - ./data/redis/data:/data
 
   celery_services:
-    container_name: celery_services
     image: "celery_services:latest"
+    container_name: celery_services
     build:
       context: "./celery_services"
       dockerfile: ./Dockerfile
     command: /bin/bash ./docker-entrypoint.sh
+    networks:
+      dev_net:
+        ipv4_address: 172.20.5.11
     volumes:
+      - /etc/localtime:/etc/localtime:ro
       - ./celery_services:/home/project
       - ./conf/celery_services/product.local.toml:/home/project/conf/product.local.toml
       - ./conf/celery_services/test.local.toml:/home/project/conf/test.local.toml
       - ./conf/celery_services/docker-entrypoint.sh:/home/project/docker-entrypoint.sh
       - ./logs/celery_services:/home/logs
-    networks:
-      dev_net:
-        ipv4_address: 172.20.5.11
     depends_on:
       - redis
       - rabbitmq
