--- a/mirrors/requirements.txt
+++ b/mirrors/requirements.txt
@@ -1,23 +1,24 @@
-amqp==5.0.9
+amqp==5.1.1
+async-timeout==4.0.2
 billiard==3.6.4.0
-celery==5.2.3
-certifi==2021.10.8
-click==8.0.3
+celery==5.2.7
+certifi==2022.5.18.1
+click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
-kombu==5.2.3
+kombu==5.2.4
 loguru==0.6.0
 packaging==21.3
-prompt-toolkit==3.0.28
-pydantic==1.9.0
-pyparsing==3.0.7
-pytomlpp==1.0.10
-pytz==2021.3
-redis==4.1.4
+prompt-toolkit==3.0.29
+pydantic==1.9.1
+pyparsing==3.0.9
+pytomlpp==1.0.11
+pytz==2022.1
+redis==4.3.3
 six==1.16.0
-typing_extensions==4.1.1
+typing_extensions==4.2.0
 vine==5.0.0
 wcwidth==0.2.5
-wrapt==1.13.3
+wrapt==1.14.1
