--- a/mirrors/requirements.txt
+++ b/mirrors/requirements.txt
@@ -8,6 +8,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 Deprecated==1.2.13
+hiredis==2.0.0
 kombu==5.2.4
 loguru==0.6.0
 packaging==21.3
