update require packages

--- a/mirrors/requirements.txt
+++ b/mirrors/requirements.txt
@@ -2,7 +2,7 @@ amqp==5.1.1
 async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
-certifi==2022.5.18.1
+certifi
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -12,14 +12,14 @@ hiredis==2.0.0
 kombu==5.2.4
 loguru==0.6.0
 packaging==21.3
-prompt-toolkit==3.0.29
-pydantic==1.9.1
+prompt-toolkit==3.0.31
+pydantic==1.10.2
 pyparsing==3.0.9
 pytomlpp==1.0.11
-pytz==2022.1
-redis==4.3.3
+pytz==2022.2.1
+redis==4.3.4
 six==1.16.0
-typing_extensions==4.2.0
+typing_extensions==4.3.0
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
